caseStudyProj/test.txt
Email.java:49: error: illegal character: '\u00a0'
    private final WatchService watcher;
^
Email.java:49: error: illegal character: '\u00a0'
    private final WatchService watcher;
 ^
Email.java:49: error: illegal character: '\u00a0'
    private final WatchService watcher;
  ^
Email.java:49: error: illegal character: '\u00a0'
    private final WatchService watcher;
   ^
Email.java:50: error: illegal character: '\u00a0'
    private final Path dir;
^
Email.java:50: error: illegal character: '\u00a0'
    private final Path dir;
 ^
Email.java:50: error: illegal character: '\u00a0'
    private final Path dir;
  ^
Email.java:50: error: illegal character: '\u00a0'
    private final Path dir;
   ^
Email.java:52: error: illegal character: '\u00a0'
    /**
^
Email.java:52: error: illegal character: '\u00a0'
    /**
 ^
Email.java:52: error: illegal character: '\u00a0'
    /**
  ^
Email.java:52: error: illegal character: '\u00a0'
    /**
   ^
Email.java:55: error: illegal character: '\u00a0'
    Email(Path dir) throws IOException {
^
Email.java:55: error: illegal character: '\u00a0'
    Email(Path dir) throws IOException {
 ^
Email.java:55: error: illegal character: '\u00a0'
    Email(Path dir) throws IOException {
  ^
Email.java:55: error: illegal character: '\u00a0'
    Email(Path dir) throws IOException {
   ^
Email.java:56: error: illegal character: '\u00a0'
        this.watcher = FileSystems.getDefault().newWatchService();
^
Email.java:56: error: illegal character: '\u00a0'
        this.watcher = FileSystems.getDefault().newWatchService();
 ^
Email.java:56: error: illegal character: '\u00a0'
        this.watcher = FileSystems.getDefault().newWatchService();
  ^
Email.java:56: error: illegal character: '\u00a0'
        this.watcher = FileSystems.getDefault().newWatchService();
   ^
Email.java:56: error: illegal character: '\u00a0'
        this.watcher = FileSystems.getDefault().newWatchService();
    ^
Email.java:56: error: illegal character: '\u00a0'
        this.watcher = FileSystems.getDefault().newWatchService();
     ^
Email.java:56: error: illegal character: '\u00a0'
        this.watcher = FileSystems.getDefault().newWatchService();
      ^
Email.java:56: error: illegal character: '\u00a0'
        this.watcher = FileSystems.getDefault().newWatchService();
       ^
Email.java:57: error: illegal character: '\u00a0'
        dir.register(watcher, ENTRY_CREATE);
^
Email.java:57: error: illegal character: '\u00a0'
        dir.register(watcher, ENTRY_CREATE);
 ^
Email.java:57: error: illegal character: '\u00a0'
        dir.register(watcher, ENTRY_CREATE);
  ^
Email.java:57: error: illegal character: '\u00a0'
        dir.register(watcher, ENTRY_CREATE);
   ^
Email.java:57: error: illegal character: '\u00a0'
        dir.register(watcher, ENTRY_CREATE);
    ^
Email.java:57: error: illegal character: '\u00a0'
        dir.register(watcher, ENTRY_CREATE);
     ^
Email.java:57: error: illegal character: '\u00a0'
        dir.register(watcher, ENTRY_CREATE);
      ^
Email.java:57: error: illegal character: '\u00a0'
        dir.register(watcher, ENTRY_CREATE);
       ^
Email.java:58: error: illegal character: '\u00a0'
        this.dir = dir;
^
Email.java:58: error: illegal character: '\u00a0'
        this.dir = dir;
 ^
Email.java:58: error: illegal character: '\u00a0'
        this.dir = dir;
  ^
Email.java:58: error: illegal character: '\u00a0'
        this.dir = dir;
   ^
Email.java:58: error: illegal character: '\u00a0'
        this.dir = dir;
    ^
Email.java:58: error: illegal character: '\u00a0'
        this.dir = dir;
     ^
Email.java:58: error: illegal character: '\u00a0'
        this.dir = dir;
      ^
Email.java:58: error: illegal character: '\u00a0'
        this.dir = dir;
       ^
Email.java:59: error: illegal character: '\u00a0'
    }
^
Email.java:59: error: illegal character: '\u00a0'
    }
 ^
Email.java:59: error: illegal character: '\u00a0'
    }
  ^
Email.java:59: error: illegal character: '\u00a0'
    }
   ^
Email.java:61: error: illegal character: '\u00a0'
    /**
^
Email.java:61: error: illegal character: '\u00a0'
    /**
 ^
Email.java:61: error: illegal character: '\u00a0'
    /**
  ^
Email.java:61: error: illegal character: '\u00a0'
    /**
   ^
Email.java:64: error: illegal character: '\u00a0'
    void processEvents() {
^
Email.java:64: error: illegal character: '\u00a0'
    void processEvents() {
 ^
Email.java:64: error: illegal character: '\u00a0'
    void processEvents() {
  ^
Email.java:64: error: illegal character: '\u00a0'
    void processEvents() {
   ^
Email.java:65: error: illegal character: '\u00a0'
        for (;;) {
^
Email.java:65: error: illegal character: '\u00a0'
        for (;;) {
 ^
Email.java:65: error: illegal character: '\u00a0'
        for (;;) {
  ^
Email.java:65: error: illegal character: '\u00a0'
        for (;;) {
   ^
Email.java:65: error: illegal character: '\u00a0'
        for (;;) {
    ^
Email.java:65: error: illegal character: '\u00a0'
        for (;;) {
     ^
Email.java:65: error: illegal character: '\u00a0'
        for (;;) {
      ^
Email.java:65: error: illegal character: '\u00a0'
        for (;;) {
       ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
 ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
  ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
   ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
    ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
     ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
      ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
       ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
        ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
         ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
          ^
Email.java:67: error: illegal character: '\u00a0'
            // wait for key to be signaled
           ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
 ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
  ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
   ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
    ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
     ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
      ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
       ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
        ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
         ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
          ^
Email.java:68: error: illegal character: '\u00a0'
            WatchKey key;
           ^
Email.java:69: error: illegal character: '\u00a0'
            try {
^
Email.java:69: error: illegal character: '\u00a0'
            try {
 ^
Email.java:69: error: illegal character: '\u00a0'
            try {
  ^
Email.java:69: error: illegal character: '\u00a0'
            try {
   ^
Email.java:69: error: illegal character: '\u00a0'
            try {
    ^
Email.java:69: error: illegal character: '\u00a0'
            try {
     ^
Email.java:69: error: illegal character: '\u00a0'
            try {
      ^
Email.java:69: error: illegal character: '\u00a0'
            try {
       ^
Email.java:69: error: illegal character: '\u00a0'
            try {
        ^
Email.java:69: error: illegal character: '\u00a0'
            try {
         ^
Email.java:69: error: illegal character: '\u00a0'
            try {
          ^
Email.java:69: error: illegal character: '\u00a0'
            try {
           ^
Email.java:70: error: illegal character: '\u00a0'
                key = watcher.take();
^
Email.java:70: error: illegal character: '\u00a0'
                key = watcher.take();
 ^
Email.java:70: error: illegal character: '\u00a0'
                key = watcher.take();
  ^
Email.java:70: error: illegal character: '\u00a0'
                key = watcher.take();
   ^
100 errors
only showing the first 100 errors, of 741 total; use -Xmaxerrs if you would like to see more
